--- a/en/NScrLuaAPI.html
+++ b/en/NScrLuaAPI.html
@@ -491,10 +491,10 @@
 							Returning `true` updates the screen, while `false` does not update it.
 						</p>
 						<div class="Notice">
-							<div class="NoticeHead">Note:</div>
+							<div class="NoticeHead">Å¶</div>
 							<div class="NoticeBody">
-								Although referred to as an animation interrupt, it is not multithreaded. <br />
-								This function is called at points where cell animation usually occurs, such as during a click wait. <br />
+								Although referred to as an animation interrupt, it is not multithreaded.
+								This function is called at points where cell animation usually occurs, such as during a click wait.
 								While this function is executing, other processes stop.
 							</div>
 						</div>
