--- a/en/NScrLuaAPI.html
+++ b/en/NScrLuaAPI.html
@@ -745,7 +745,7 @@
 					Use this if you want to disable automatic conversion.
 				</p>
 				<div class="Notice">
-					<div class="NoticeHead">Note:</div>
+					<div class="NoticeHead">Å¶</div>
 					<div class="NoticeBody">
 						Using this command disables default text processing and display.
 					</div>
